--- a/pages/about.html.eex
+++ b/pages/about.html.eex
@@ -1,26 +1,23 @@
 ---
 title: About
 ---
-<div class="columns is-multiline is-centered">
+<div class="columns is-multiline">
   <div class="column is-6">
-    <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15">
-      Illustrator en vormgever
-    </h6>
+    <h1 class="title is-5 mt-6">Illustrator en vormgever</h1>
 
-    <div class="block mt-4 is-family-secondary has-text-centered">
+    <div class="block mt-4 is-family-secondary">
 Hallo! ik ben Sannet, enthousiaste illustrator en vormgever.  In 2015 studeerde ik af als illustrator aan Academie Minerva in Groningen. Een periode ben ik freelancer geweest en heb ik aan verschillende opdrachten gewerkt. Momenteel ben ik werkzaam als UI designer en verzorg ik de vormgeving voor het bedrijf waar ik in dienst ben. Ik ben veelzijdig en vind het dan ook erg leuk om verschillende vormen van creativiteit te kunnen beoefenen maar mijn passie is het maken van illustraties en kinderillustraties. 
     </div>
   </div>
 
   <div class="column is-4 is-offset-1">
     <p class="image">
-      <img src="<%= asset "images/about.png" %>" class=""></img>
+      <img src="<%= asset "images/hi.png" %>" class=""></img>
     </p>
   </div>
 </div>
 
-<hr class="has-margin-top-50">
-
+<hr>
 
 <h1 class="title is-5 mt-6 has-margin-bottom-minus-10">Ervaring</h1>
 
