--- a/pages/ui illustration.html.eex
+++ b/pages/ui illustration.html.eex
@@ -4,5 +4,6 @@ title: Portfolio
 <%= render "gallery",
   images: [
     "home/webshop-page",
-    "home/dreamhomes"
+    "home/dreamhomes",
+    "home/parlos-coffee"
 ] %>
