New illustration homepage

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -6,7 +6,7 @@ title: Portfolio
     "home/firsthome",
     "home/hi",
     "home/jungle",
-    "home/squirrle",
+    "home/rain",
     "home/Bunnies",
     "home/bear",
     "home/friends",
