Another new illustration homepage

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -7,7 +7,7 @@ title: Portfolio
     "home/hi",
     "home/jungle",
     "home/rain",
-    "home/Bunnies",
+    "home/mousey",
     "home/bear",
     "home/friends",
     "home/me",
