New illustrations for home page

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -6,10 +6,10 @@ title: Portfolio
     "home/firsthome",
     "home/hi",
     "home/jungle",
+    "home/happybear",
     "home/rain",
-    "home/mousey",
-    "home/bear",
-    "home/friends",
     "home/me",
+    "home/friends",
+    "home/kerst",
     "home/huisje"
 ] %>
