--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -1,8 +1,8 @@
-$family-primary: 'Montserrat', 'Helvetica';
-$family-secondary: 'Raleway', sans-serif;
+$family-primary: 'Open Sans', 'Helvetica';
+$family-secondary: 'Open Sans', Helvetica;
 $family-code: 'Amatic SC', 'Helvetica';
 
-$title-weight: 500;
+$title-weight: 600;
 $title-strong-weight: 800;
 
 $size-1: 1rem;
@@ -18,6 +18,10 @@ $navbar-dropdown-item-hover-background-color: #FFD5C7;
 $navbar-item-img-max-height: 4.5rem;
 $column-gap: 1rem;
 
+.button {
+  border-radius: 8px !important;
+}
+
 .is-horizontal-center {
     justify-content: center;
   }
@@ -32,8 +36,17 @@ $column-gap: 1rem;
     font-weight: 500;
   }
 
+  .navbar-item img {
+    max-height: 3.0em !important;
+  }
+
   hr {
     margin: 0px;
+  }
+
+  .title {
+    color: #000000 !important;
+    letter-spacing: -0.005em;
   }
 
 
