New illustrations home page

--- a/pages/contact.html.eex
+++ b/pages/contact.html.eex
@@ -4,7 +4,7 @@ title: Contact
 
 <div class="columns is-multiline is-centered">
   <div class="column is-four-fifths">
-    <h1 class="subtitle is-6 has-text-centered has-margin-top-minus-15">
+    <h1 class="title is-6 has-text-centered has-margin-top-minus-15">
       Contact
     </h1>
     
