--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -49,6 +49,26 @@ $column-gap: 1rem;
     letter-spacing: -0.005em;
   }
 
+  @media screen and (min-width: 1408px) {
+    .container {
+     padding-left: 80px !important;
+      padding-right: 80px !important;
+    }
+  }
+
+  @media screen and (min-width: 1216px) {
+    .container {
+      padding-left: 80px !important;
+       padding-right: 80px !important;
+     }
+  }
+
+  @media screen and (min-width: 1024px) {
+    .container {
+      padding-left: 80px !important;
+       padding-right: 80px !important;
+     }
+  }
 
 $tablet: 768px;
 
