--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -7,8 +7,8 @@ title: Portfolio
     "home/Poppies",
     "home/Partyworm",
     "home/Mees",
-    "home/fallingstar",
-    "home/springkitty",
+    "home/Kidsroom",
+    "home/londonbus",
     "home/firsthome",
     "home/hi",
     "home/friends"
