--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -10,6 +10,6 @@ title: Portfolio
     "home/Kidsroom",
     "home/londonbus",
     "home/firsthome",
-    "home/hi",
+    "home/Icecream",
     "home/friends"
 ] %>
