--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -15,7 +15,6 @@ $link: rgb(0, 0, 0);
 $navbar-dropdown-item-hover-color: rgb(0, 0, 0);
 $navbar-item-hover-background-color: #FFFFF;
 $navbar-dropdown-item-hover-background-color: #FFD5C7;
-$navbar-item-img-max-height: 6.0rem;
 $column-gap: 1rem;
 
 .button {
@@ -34,6 +33,10 @@ $column-gap: 1rem;
   .navbar-item {
     font-size: 1rem;
     font-weight: 500;
+  }
+
+  .navbar-item img {
+    max-height: 6.0rem !important;
   }
 
   hr {
