--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -13,7 +13,7 @@ $size-6: 1rem;
 
 $link: rgb(0, 0, 0);
 $navbar-dropdown-item-hover-color: rgb(0, 0, 0);
-$navbar-item-hover-background-color: #FFFFF;
+$navbar-item-hover-background-color: #FFFFFF;
 $navbar-dropdown-item-hover-background-color: #FFD5C7;
 $column-gap: 1rem;
 
