--- a/pages/ui illustration.html.eex
+++ b/pages/ui illustration.html.eex
@@ -3,7 +3,9 @@ title: Portfolio
 ---
 <%= render "gallery",
   images: [
+    "home/qmail",
     "home/webshop-page",
     "home/dreamhomes",
-    "home/travrs"
+    "home/travrs",
+    "home/Travrs2"
 ] %>
