--- a/pages/about.html.eex
+++ b/pages/about.html.eex
@@ -3,18 +3,17 @@ title: About
 ---
 <div class="columns is-multiline">
   <div class="column is-6">
-    <h1 class="title is-5 mt-6">Illustrator en vormgever</h1>
-
-    <div class="block mt-4 is-family-secondary">
-Hallo! ik ben Sannet, enthousiaste illustrator en vormgever.  In 2015 studeerde ik af als illustrator aan Academie Minerva in Groningen. Een periode ben ik freelancer geweest en heb ik aan verschillende opdrachten gewerkt. Momenteel ben ik werkzaam als UI designer en verzorg ik de vormgeving voor het bedrijf waar ik in dienst ben. Ik ben veelzijdig en vind het dan ook erg leuk om verschillende vormen van creativiteit te kunnen beoefenen maar mijn passie is het maken van illustraties en kinderillustraties. 
-    </div>
-  </div>
-
-  <div class="column is-3 is-offset-1">
     <p class="image">
-      <img src="<%= asset "images/avatar.png" %>" class="is-rounded"></img>
-    </p>
-  </div>
+      <img src="<%= asset "images/avatar.png" %>"</img>
+      </p>
+    </div>
+    <div class="column is-6">
+      <h1 class="title is-5 mt-6">Illustrator en vormgever</h1>
+
+        <div class="block mt-4 is-family-secondary">
+Hallo! ik ben Sannet, enthousiaste illustrator en vormgever.  In 2015 studeerde ik af als illustrator aan Academie Minerva in Groningen. Een periode ben ik freelancer geweest en heb ik aan verschillende opdrachten gewerkt. Momenteel ben ik werkzaam als UI designer en verzorg ik de vormgeving voor het bedrijf waar ik in dienst ben. Ik ben veelzijdig en vind het dan ook erg leuk om verschillende vormen van creativiteit te kunnen beoefenen maar mijn passie is het maken van illustraties en kinderillustraties. 
+      </div>
+    </div>
 </div>
 
 <hr>
