New font and renewed images home

--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -1,5 +1,5 @@
-$family-primary: 'Open Sans', 'Helvetica';
-$family-secondary: 'Open Sans', Helvetica;
+$family-primary: 'Outfit', 'Helvetica';
+$family-secondary: 'Outfit', Helvetica;
 $family-code: 'Amatic SC', 'Helvetica';
 
 $title-weight: 600;
