--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -3,11 +3,11 @@ title: Portfolio
 ---
 <%= render "gallery",
   images: [
-    "home/Huisjeskerst",
-    "home/Zeemeeuw",
-    "home/Avontuur",
-    "home/Sleepy time",
-    "home/Partyworm",
+    "home/bluebirds",
+    "home/teatime",
+    "home/embrace",
+    "home/swans,
+    "home/bear,
     "home/Mees",
     "home/Muisjekerst",
     "home/londonbus",
