--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -6,8 +6,8 @@ title: Portfolio
     "home/bluebirds",
     "home/teatime",
     "home/embrace",
-    "home/swans,
-    "home/bear,
+    "home/swans",
+    "home/bear",
     "home/Mees",
     "home/Muisjekerst",
     "home/londonbus",
