--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -1,6 +1,6 @@
 $family-primary: 'Outfit', 'Helvetica';
 $family-secondary: 'Outfit', Helvetica;
-$family-code: 'Amatic SC', 'Helvetica';
+$family-code: 'Outfit', 'Helvetica';
 
 $title-weight: 600;
 $title-strong-weight: 800;
