Adding text about me page

--- a/pages/about.html.eex
+++ b/pages/about.html.eex
@@ -2,16 +2,16 @@
 title: About
 ---
 <div class="columns is-multiline">
-    <div class="column is-3">
+    <div class="column is-6">
       <h1 class="title is-6 mt-6">Illustrator <br/> en vormgever</h1>
 
         <div class="block mt-4 is-family-secondary">
           Hallo! Ik ben Sannet, een enthousiaste illustrator en vormgever. In 2015 studeerde ik af als illustrator aan Academie Minerva in Groningen. Na een periode als freelancer, waarin ik diverse opdrachten uitvoerde, werk ik momenteel als UI designer.
         </div>
       </div>
-    <div class="column is-3">
+    <div class="column is-6">
       <div class="block mt-4 is-family-secondary">
-        Ik verzorg ik de vormgeving voor het bedrijf waar ik in dienst ben. Ik ben erg veelzijdig en geniet ervan om verschillende creatieve disciplines te beoefenen, al ligt mijn hart toch echt bij het maken van illustraties, en dan vooral kinderillustraties.
+        Ik verzorg ik de vormgeving voor het bedrijf waar ik in dienst ben. Ik ben erg veelzijdig en geniet ervan om verschillende creatieve disciplines te beoefenen, al ligt mijn hart toch echt bij het maken van illustraties, en dan vooral kinderillustraties. Naast deze creatieve uitingen ben ik ook geïnteresseerd in fotografie en hoop hier in de toekomst veel meer mee te oefenen en over bij te kunnen leren. In mijn vrije tijd geniet ik van wandelen, geocachen, bird watching en tekenen. Ik ben heel actief op Instagram waar ik ook veel van mijn illustratieve werk deel.
       </div>
     </div>
 </div>
