--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -17,6 +17,10 @@ $navbar-item-hover-background-color: #FFFFFF;
 $navbar-dropdown-item-hover-background-color: #FFD5C7;
 $column-gap: 1rem;
 
+.section {
+  padding: 1.8rem;
+}
+
 .button {
   border-radius: 8px !important;
 }
