Removing margins text

--- a/pages/about.html.eex
+++ b/pages/about.html.eex
@@ -18,7 +18,7 @@ title: About
 
 <hr>
 
-<h1 class="title is-5 mt-6 has-margin-bottom-minus-10">Ervaring</h1>
+<h1 class="title is-5 mt-6">Ervaring</h1>
 
 <div class="block mt-6 mb-5 is-family-secondary">
   <p class="mb-1"><strong>2017 - heden</strong></p>
