--- a/pages/about.html.eex
+++ b/pages/about.html.eex
@@ -3,7 +3,7 @@ title: About
 ---
 <div class="columns is-multiline">
     <div class="column is-6">
-      <h1 class="title is-6 mt-6">Illustrator <br/> en vormgever</h1>
+      <h1 class="title is-6">Illustrator <br/> en vormgever</h1>
 
         <div class="block mt-4 is-family-secondary">
           Hallo! Ik ben Sannet, een enthousiaste illustrator en vormgever. In 2015 studeerde ik af als illustrator aan Academie Minerva in Groningen. Na een periode als freelancer, waarin ik diverse opdrachten uitvoerde, werk ik momenteel als UI designer.
